src/test/ui/const-generics/type-dependent/issue-71382.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-71382.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-71382.rs:15:23
   |
LL |     fn test<const FN: fn() -> u8>(&self) -> u8 {
   |                       ^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

